# dry-rs

./: .rustfmt.toml  COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release.toml
examples/: commas.rs  macro.rs  match.rs  simple.rs  space.rs  tuples.rs  wrap.rs
ideas/: _scratch.rs  commas.rs  macro.rs  match.rs  space.rs  tuples.rs  wrap.rs
src/: lib.rs
