[package]
authors = ["Andres Riofrio <riofrios@gmail.com>"]
categories = ["development-tools"]
description = "Rust macros for idiomatic deduplication of code. Use whenever `macro_rules!` are too powerful and clunky."
edition = "2021"
exclude = ["ideas/*"]
keywords = ["macro", "for", "for_each", "repeat", "substitute"]
license = "MIT OR Apache-2.0"
name = "dry"
readme = "README.md"
repository = "https://github.com/coldriverstudio/dry-rs"
version = "0.1.0"

[lib]
proc-macro = true

[features]
nightly = []

[dependencies]
proc-macro-error = {version = "1.0", default-features = false}
